@@ -78,10 +78,12 @@ struct segtype_handler {
 			       uint64_t *total_denominator, float *percent);
 	int (*target_present) (void);
 	void (*destroy) (const struct segment_type * segtype);
-	int (*target_register) (struct dm_pool *mem, struct lv_segment *seg,
-				struct config_tree *cft, int events);
-	int (*target_unregister) (struct dm_pool *mem, struct lv_segment *seg,
-				  struct config_tree *cft, int events);
+	int (*target_register_events) (struct dm_pool *mem,
+				       struct lv_segment *seg,
+				       struct config_tree *cft, int events);
+	int (*target_unregister_events) (struct dm_pool *mem,
+					 struct lv_segment *seg,
+					 struct config_tree *cft, int events);
 };
 
 struct segment_type *get_segtype_from_string(struct cmd_context *cmd,
