@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2001-2004 Sistina Software, Inc. All rights reserved. 
- * Copyright (C) 2004 Red Hat, Inc. All rights reserved.
+ * Copyright (C) 2004-2005 Red Hat, Inc. All rights reserved.
  *
  * This file is part of LVM2.
  *
@@ -21,6 +21,9 @@ static int lvscan_single(struct cmd_context *cmd, struct logical_volume *lv,
 	struct lvinfo info;
 	int lv_total = 0;
 	uint64_t lv_capacity_total = 0;
+	int inkernel, snap_active = 1;
+	struct lv_segment *snap_seg = NULL;
+	float snap_percent;     /* fused, fsize; */
 
 	const char *active_str, *snapshot_str;
 
@@ -29,8 +32,27 @@ static int lvscan_single(struct cmd_context *cmd, struct logical_volume *lv,
 	    !(lv_is_cow(lv)))
 		return ECMD_PROCESSED;
 
+	inkernel = lv_info(cmd, lv, &info, 1) && info.exists;
+	if (lv_is_origin(lv)) {
+		list_iterate_items_gen(snap_seg, &lv->snapshot_segs,
+				       origin_list) {
+			if (inkernel &&
+			    (snap_active = lv_snapshot_percent(snap_seg->cow,
+							       &snap_percent)))
+				if (snap_percent < 0 || snap_percent >= 100)
+					snap_active = 0;
+		}
+		snap_seg = NULL;
+	} else if ((snap_seg = find_cow(lv))) {
+		if (inkernel &&
+		    (snap_active = lv_snapshot_percent(snap_seg->cow,
+						       &snap_percent)))
+			if (snap_percent < 0 || snap_percent >= 100)
+				snap_active = 0;
+	}
+
 /* FIXME Add -D arg to skip this! */
-	if (lv_info(cmd, lv, &info, 0) && info.exists)
+	if (inkernel && snap_active)
 		active_str = "ACTIVE   ";
 	else
 		active_str = "inactive ";
